Rewrite to .net core, changed namespaces

--- a/N1990.Episerver.Cms.Audit/Views/BlockTypes/BlockTypeAudit.cshtml
+++ b/N1990.Episerver.Cms.Audit/Views/BlockTypes/BlockTypeAudit.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Mvc.Razor
-@using N1990.Episerver.Cms.Audit.Models
-@model N1990.Episerver.Cms.Audit.Models.ContentTypeAudit
+@using Solv.Optimizely.Cms.Audit.Models
+@model Solv.Optimizely.Cms.Audit.Models.ContentTypeAudit
 
 @{
 	Layout = null;
