--- a/N1990.Episerver.Cms.Audit/Views/PageTypes/PageTypeAudit.cshtml
+++ b/N1990.Episerver.Cms.Audit/Views/PageTypes/PageTypeAudit.cshtml
@@ -1,6 +1,6 @@
 @using EPiServer.Web.Mvc.Html
-@using N1990.Episerver.Cms.Audit.Business
-@using N1990.Episerver.Cms.Audit.Models
+@using Solv.Optimizely.Cms.Audit.Business
+@using Solv.Optimizely.Cms.Audit.Models
 @model ContentTypeAudit
 @{
     Layout = null;
