--- a/N1990.Episerver.Cms.Audit/Views/Shared/RenderUsage.cshtml
+++ b/N1990.Episerver.Cms.Audit/Views/Shared/RenderUsage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EPiServer.Web.Mvc.Html
-@model N1990.Episerver.Cms.Audit.Models.ContentTypeAudit.ContentItem
+@model Solv.Optimizely.Cms.Audit.Models.ContentTypeAudit.ContentItem
     
 @{
     var htmlString = "<a href =\"" + Url.ContentUrl(Model.ContentLink) + "\">" + Model.Name + "</a>";
