--- a/N1990.Episerver.Cms.Audit/Views/BlockTypes/Index.cshtml
+++ b/N1990.Episerver.Cms.Audit/Views/BlockTypes/Index.cshtml
@@ -1,7 +1,7 @@
-@using N1990.Episerver.Cms.Audit.Models
+@using Solv.Optimizely.Cms.Audit.Models
 @model CmsAuditPage
 @{
-    Layout = "../Shared/_layout.cshtml";
+	Layout = "../Shared/_AuditLayout.cshtml";
     var pageTypeCtr = 1;
 }
 
