--- a/N1990.Episerver.Cms.Audit/Views/Shared/_AuditLayout.cshtml
+++ b/N1990.Episerver.Cms.Audit/Views/Shared/_AuditLayout.cshtml
@@ -10,12 +10,19 @@
 	<!-- Shell -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<style>
+        html{font-size: 16px;}
 		body { background-color: #efefef; }
 		main { background-color: #fff; }
 		.tab-content {
 			border: 1px solid #ddd;
 			border-radius: 7px;
+            height: 90vh;
+            overflow-y: scroll;
 		}
+        #cms-content-types{
+            height: 90vh;
+            overflow-y: scroll;
+        }
 		section { padding: 20px; }
 		.site-list .tab-content .tab-pane { padding: 20px; }
 		tr.hidden { display: none; }
@@ -35,7 +42,7 @@
 			font-size: 10px;
 			margin: 80px auto;
 			position: relative;
-			text-indent: -9999em;
+			text-indent: -9999em; 
 			-webkit-transform: translateZ(0);
 			-ms-transform: translateZ(0);
 			transform: translateZ(0);
@@ -103,13 +110,12 @@
 	</style>
 </head>
 <body>
-
-@Html.CreatePlatformNavigationMenu()
-
+    @Html.AntiForgeryToken()
+    @Html.Raw(Html.CreatePlatformNavigationMenu())
 <main class="container">
-    
-    @RenderBody()
-
+    <div @Html.ApplyPlatformNavigation()>
+        @RenderBody()
+    </div>
 </main>
 <script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -157,7 +163,7 @@
             var siteGuid = $(tab).data('siteguid');
             showProgressBarInside($tab);
             $.ajax({
-                url: 'cmsaudit/indexsiteaudit',
+                url: '/cmsaudit/indexsiteaudit',
                 data: {
                     siteGuid: siteGuid
                 }
@@ -195,8 +201,8 @@
         var $contentTypeRow = $(contentTypeRow);
         var contentTypeId = $contentTypeRow.data('contenttypeid');
         var url = $('#cms-content-types').data('type') == 'page'
-            ? 'pagetypes/pagetypeaudit'
-            : ($('#cms-content-types').data('type') == 'block' ? 'blocktypes/blocktypeaudit' : '');
+            ? '/pagetypes/pagetypeaudit'
+            : ($('#cms-content-types').data('type') == 'block' ? '/blocktypes/blocktypeaudit' : '');
         if (url !== '') {
             $.ajax({
                 url: url,
