--- a/N1990.Episerver.Cms.Audit/Views/VisitorGroups/Index.cshtml
+++ b/N1990.Episerver.Cms.Audit/Views/VisitorGroups/Index.cshtml
@@ -1,9 +1,9 @@
 @using EPiServer.Web.Mvc.Html
-@using N1990.Episerver.Cms.Audit.Business
-@using N1990.Episerver.Cms.Audit.Models
+@using Solv.Optimizely.Cms.Audit.Business
+@using Solv.Optimizely.Cms.Audit.Models
 @model CmsAuditPage
 @{
-    Layout = "../Shared/_layout.cshtml";
+    Layout = "../Shared/_AuditLayout.cshtml";
     var pageTypeCtr = 1;
 }
 <div id="cms-content-types" data-type="visitor">
